--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
-    "@types/react-helmet": "^6.1.1"
+    "@types/mdx-js__react": "^1.5.3",
+    "@types/react-helmet": "^6.1.1",
+    "tsconfig-paths-webpack-plugin": "^3.5.1"
   }
 }
